welcome.lessons.welcome.array.basics.Array1.scala.error
Array1:24: error: ';' expected but '<-' found.
    T(i)<-getCouleurSol()
        ^